--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #context path default value : empty
 #server.servlet.context-path=/spring_mvc_ecommerce
 #DB properties
+#spring.datasource.url=jdbc:mysql://localhost:3306/conweb?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.url=jdbc:mysql://localhost:3306/GoGrocers?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Root@12345
@@ -19,5 +20,7 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.open-in-view=false
 #property to disable hibernateLazyInitializer during initialized proxies
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
+SECRET_KEY=mySecretKey1234
+#JWT expiration timeout 24*3600*1000
+EXP_TIMEOUT=86400000
 
