--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -2,22 +2,22 @@
 #server.port=7070
 #context path default value : empty
 #server.servlet.context-path=/spring_mvc_ecommerce
+spring.main.web-application-type=none
 #DB properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/conweb?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.url=jdbc:mysql://localhost:3306/GoGrocers?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Root@12345
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #logging.level.org.springframework.orm.hibernate5=DEBUG
-
-# Spring MVC ViewResolver related
-#spring.mvc.view.prefix=/WEB-INF/views
-#spring.mvc.view.suffix=.jsp
+file.upload.location="E:\CDAC PROJECT\CDAC-Project-Go-Grocers\5_Images"
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 #Disable open session in view 
-#spring.jpa.open-in-view=false
+
 #property to disable hibernateLazyInitializer during initialized proxies
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 SECRET_KEY=mySecretKey1234
