--- a/2_BackEnd/GoGrocers/pom.xml
+++ b/2_BackEnd/GoGrocers/pom.xml
@@ -73,10 +73,10 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.4</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
