--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.port=7070
 #context path default value : empty
 #server.servlet.context-path=/spring_mvc_ecommerce
-spring.main.web-application-type=none
+#spring.main.web-application-type=none
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/GoGrocers?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
