--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/GoGrocers?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Root@12345
+spring.datasource.password=root123
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
