--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Tomcat server port number 8080
+Tomcat server port number 8080
 #server.port=7070
 #context path default value : empty
 #server.servlet.context-path=/spring_mvc_ecommerce
