--- a/2_BackEnd/GoGrocers/src/main/resources/application.properties
+++ b/2_BackEnd/GoGrocers/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#logging.level.org.springframework.orm.hibernate5=DEBUG
+logging.level.org.springframework.orm.hibernate5=DEBUG
+logging.file.name=springlog.log
+logging.pattern.file=%d{yyyy-mm-dd}-%msg %n
 file.upload.location="E:\CDAC PROJECT\CDAC-Project-Go-Grocers\5_Images"
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
